Added scrollability for the selection section

--- a/website/templates/unavailability.html
+++ b/website/templates/unavailability.html
@@ -290,7 +290,7 @@
                         Selections
                     </h5>
                     <hr>
-                    <div id="unavailabilityList" class="unavailability-list"> </div>
+                    <div id="unavailabilityList" class="overflow-auto border rounded p-2 bg-light" style = "max-height: 300px;"> </div>
                 </div>
             </aside>
 
