--- a/website/templates/unavailability.html
+++ b/website/templates/unavailability.html
@@ -148,6 +148,8 @@
                                             <!-- Start Hour Selection -->
                                             <label for="unavailability-start-hour">Select Start Hour:</label>
                                             <select id="unavailability-start-hour" class="form-select mb-3">
+                                                <option value="09">7 AM</option>
+                                                <option value="09">8 AM</option>
                                                 <option value="09">9 AM</option>
                                                 <option value="10">10 AM</option>
                                                 <option value="11">11 AM</option>
@@ -156,12 +158,12 @@
                                                 <option value="14">2 PM</option>
                                                 <option value="15">3 PM</option>
                                                 <option value="16">4 PM</option>
-                                                <option value="17">5 PM</option>
                                             </select>
 
                                             <!-- End Hour Selection -->
                                             <label for="unavailability-end-hour">Select End Hour:</label>
                                             <select id="unavailability-end-hour" class="form-select mb-3">
+                                                <option value="09">8 AM</option>
                                                 <option value="09">9 AM</option>
                                                 <option value="10">10 AM</option>
                                                 <option value="11">11 AM</option>
