Validation logic for admin

--- a/website/templates/admin.html
+++ b/website/templates/admin.html
@@ -27,7 +27,7 @@
                 <!-- Navigation Buttons -->
                 <ul class="nav">
                     <li>
-                        <a href="{{ url_for('main.unavailability_page') }}" class="nav-link px-2 text-dark">
+                        <a href="{{ url_for('main.unavailability') }}" class="nav-link px-2 text-dark">
                             <i class="bi bi-check2-circle"></i>
                             Availability
                             <i class="bi bi-dot dot-icon"></i>
