--- a/website/static/schedule.css
+++ b/website/static/schedule.css
@@ -69,6 +69,17 @@ body h5 {
     border: 1px solid #bbb;
 }
 
+.events-grid {
+    display: grid;
+    grid-template-columns: 120px repeat(7, 1fr);
+    width: 100%;
+    overflow-x: auto; 
+    overflow-y: hidden;
+    grid-gap: 1px;
+    background-color: #bbb;
+    border: 1px solid #bbb;
+}
+
 .insight-text {
     font-size: 0.95rem;
 }
