--- a/website/templates/events.html
+++ b/website/templates/events.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="{{ url_for('static', filename='schedule.css') }}">
-    <title>Availability - Coffeehouse</title>
+    <title>Events - Coffeehouse</title>
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
     <!-- Header -->
     <div class="container">
         <header class="d-flex align-items-center justify-content-between py-2 mb-3 border-bottom"
-            style="box-shadow: 0 .125rem .25rem rgba(0, 0, 0, 0.075); clip-path: inset(0 0 -.5rem 0);">
+            style="box-shadow: 0 8px 4px -4px rgba(0, 0, 0, 0.05);">
             <div class="d-flex align-items-center col-md-6">
                 <a href="/" class="d-flex align-items-center text-dark text-decoration-none me-3">
                     <img src="{{ url_for('static', filename='SmallLogo.png') }}" alt="Logo" width="50" height="50">
@@ -27,13 +27,13 @@
                 <!-- Navigation Buttons -->
                 <ul class="nav">
                     <li>
-                        <a href="{{ url_for('main.unavailability') }}" class="nav-link px-2 text-secondary">
+                        <a href="{{ url_for('main.unavailability') }}" class="nav-link px-2 text-secondary hover-dark">
                             <i class="bi bi-check2-circle"></i>
-                            Availability
+                            Unavailability
                         </a>
                     </li>
                     <li>
-                        <a href="{{ url_for('main.schedule') }}" class="nav-link px-2 text-secondary">
+                        <a href="{{ url_for('main.schedule') }}" class="nav-link px-2 text-secondary hover-dark">
                             <i class="bi bi-calendar-range me-1"></i>
                             Schedule
                         </a>
@@ -47,48 +47,67 @@
                     </li>
                 </ul>
             </div>
-            <!-- Welcome w/ Name -->
-           <div class="text-center d-flex align-items-center justify-content-center">
-            <!-- Dropdown -->
-            <div class="dropdown">
-                <button class="btn p-0 border-0 bg-transparent shadow-none" type="button" id="dropdownMenuButton"
-                    data-bs-toggle="dropdown" aria-expanded="false">
-                    <span class="position-relative">
-                        <i class="bi bi-bell-fill"></i>
-                        <!-- Notification Dot -->
-                        <span class="notification-dot"></span>
-                    </span>
-                </button>
-                <div class="dropdown dropdown-hover">
-                    <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="dropdownMenuButton">
+            <!-- Dropdown Section -->
+            <ul class="nav d-flex align-items-center">
+                <!-- Notifications Dropdown -->
+                <li class="nav-item dropdown me-5">
+                    <button class="btn p-0 border-0 bg-transparent shadow-none" type="button" id="notificationsDropdown"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        <span class="position-relative">
+                            <i class="bi bi-bell-fill"></i>
+                            <!-- Notification Dot -->
+                            <span class="notification-dot"></span>
+                        </span>
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="notificationsDropdown">
                         <li class="dropdown-header d-flex align-items-center">
                             <i class="bi bi-bell-fill me-2"></i> Notifications
                         </li>
-                        <li style="max-height: 150px; min-width: 200px; overflow-y: auto;">
+                        <li class="dropdown-divider mt-0"></li>
+                        <li style="max-height: 250px; min-width: 300px; overflow-y: auto;">
                             <ul id="notification-list" class="list-unstyled px-2 mb-0">
                                 <!-- Notifications will be added dynamically here -->
-                                <li>Notification 1</li>
-                                <li>Notification 2</li>
-                                <li>Notification 3</li>
-                                <li>Notification 4</li>
-                                <li>Notification 5</li>
-                                <li>Notification 6</li>
-                                <li>Notification 6</li>
-                                <li>Notification 7</li>
-                                <li>Notification 8</li>
                             </ul>
                         </li>
                         <li class="dropdown-divider"></li>
                         <li class="d-flex justify-content-end px-2">
-                            <button class="btn btn-sm btn-light border" id="clear-notifications">Clear</button>
+                            <button class="btn btn-sm btn-light hover-dark-bg border border-dark" id="clear-notifications"
+                                onclick=clearNotifications()>
+                                <i class="bi bi-arrow-counterclockwise me-1"></i>Clear</button>
                         </li>
                     </ul>
-                </div>
-            </div>
-            <p class="ms-5 mb-0">
-                Welcome, {{ name }}
-                <i class="bi bi-person-fill"></i>
-            </p>
+                </li>
+                <!-- Profile Dropdown -->
+                <li class="nav-item dropdown">
+                    <button class="btn p-0 border-0 bg-transparent shadow-none" type="button" id="profileDropdown"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        <span>
+                            Welcome, {{ fname }}
+                            <i class="bi bi-person-fill"></i>
+                        </span>
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="profileDropdown"
+                        style="min-width: 200px;">
+                        <li class="dropdown-header d-flex align-items-center">
+                            <i class="bi bi-person-fill me-2"></i> Profile Info
+                        </li>
+                        <li class="dropdown-divider mt-0"></li>
+                        <!-- Employee Info Section -->
+                        <li class="px-3">
+                            <p class="mb-1"><strong>Name:</strong> {{fname}} {{lname}}</p>
+                            <p class="mb-1"><strong>Hourly:</strong> ${{ '{:.2f}'.format(wage) }}</p>
+                        </li>
+                        <li class="dropdown-divider"></li>
+                        <!-- Logout Button -->
+                        <li class="d-flex justify-content-end px-2">
+                            <a href="{{ url_for('auth.logout') }}" class="btn btn-sm btn-light hover-dark-bg border border-dark" id="logout-link">
+                                <i class="bi bi-door-open"></i>
+                                Sign out
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
         </header>
     </div>
 
@@ -102,37 +121,7 @@
                     </h5>
                     <hr>
                     <ul class="nav nav-pills flex-column mb-auto">
-                        <li>
-                            <a href="#"
-                                class="d-flex align-items-center p-2 mb-2 bg-brown text-white rounded small-font text-decoration-none"
-                                onclick="openModal()">
-                                <i class="bi bi-plus-circle me-2"></i>
-                                Add
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#"
-                                class="d-flex align-items-center p-2 mb-2 bg-brown text-white rounded small-font text-decoration-none"
-                                onclick="clearAvailability()">
-                                <i class="bi bi-x-circle me-2"></i>
-                                Clear
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#"
-                                class="d-flex align-items-center p-2 mb-2 bg-brown text-white rounded small-font text-decoration-none">
-                                <i class="bi bi-bell me-2"></i>
-                                Notify Manager
-                            </a>
-                        </li>
                     </ul>
-                </div>
-                <div class="p-3 bg-light border rounded shadow-sm">
-                    <h5><i class="bi bi-card-checklist me-1"></i>
-                        Selections
-                    </h5>
-                    <hr>
-                    <div id="availabilityList" class="availability-list"> </div>
                 </div>
             </aside>
 
@@ -141,94 +130,79 @@
                 <div class="p-3 bg-light border rounded shadow-sm">
                     <header class="d-flex align-items-center justify-content-between">
                         <div class="d-flex align-items-center ms-2">
-                            <button type="button" id="prevWeek" class="btn p-0 me-2">
+                            <button type="button" id="prevWeek" class="btn p-0 me-2 shadow-none" onclick=updateWeek(-1)>
                                 <i class="bi bi-chevron-left"></i>
                             </button>
-                            <input type="week" id="availabilityDate" name="availabilityDate" class="ms-2 me-2">
-                            <button type="button" id="nextWeek" class="btn p-0 ms-2">
+                            <input type="week" id="eventsDate" name="eventsDate" class="ms-2 me-2">
+                            <button type="button" id="nextWeek" class="btn p-0 ms-2 shadow-none" onclick=updateWeek(1)>
                                 <i class="bi bi-chevron-right"></i>
                             </button>
                         </div>
                         <h4 class="text-center m-0">
-                            <i class="bi bi-check2-circle me-2"></i>
+                            <i class="bi bi-gift me-2"></i>
                             Events
                         </h4>
-                         <!-- Dropdown -->
-                         <div class="dropdown">
-                            <button class="btn p-0 border-0 bg-transparent shadow-none" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                              <i class="bi bi-three-dots me-2"></i>
+                        <!-- Dropdown -->
+                        <div class="dropdown">
+                            <button class="btn p-0 border-0 bg-transparent shadow-none" type="button"
+                                id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="bi bi-three-dots me-2"></i>
                             </button>
                             <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="dropdownMenuButton">
-                              <li>
-                                <a class="dropdown-item" href="#" onclick="printPage()">
-                                    <i class="bi bi-printer me-2"></i>
-                                    Print
-                                </a>
-                              </li>
+                                <li>
+                                    <a class="dropdown-item" href="#" onclick="printPage()">
+                                        <i class="bi bi-printer me-2"></i>
+                                        Print
+                                    </a>
+                                </li>
                             </ul>
-                        </div>  
+                        </div>
                     </header>
                     <hr>
-                    <div class="schedule-grid">
+                    <div class="events-grid">
                         <div class="empty-cell"></div>
-                        {% for hour in range(7, 18) %}
-                        <div class="time-label"> {{ hour if hour < 13 else (hour%12) }}{{ 'AM' if hour < 12 else 'PM'
-                                }}</div>
-                                {% endfor %}
-
-                                {% for day in ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday",
-                                "Sunday"] %}
-                                <div class="day-label">{{ day }}</div>
-                                {% for hour in range(7, 18) %}
-                                <div class="cell" id="cell-{{ day }}-{{ hour }}"></div>
-                                {% endfor %}
-                                {% endfor %}
+                        <!-- Time Labels -->
+                        {% for hour in range(17, 24) %}
+                        <div class="time-label">
+                            {{ (hour - 12) }}PM
                         </div>
-                        </section>
-
-                        <div id="availabilityModal" class="modal">
-                            <div class="modal-content">
-                                <span class="close" onclick="closeModal()">&times;</span>
-                                <h2>Add Availability</h2>
-                                <label for="day-select">Day:</label>
-                                <select id="day-select">
-                                    <option value="Monday">Monday</option>
-                                    <option value="Tuesday">Tuesday</option>
-                                    <option value="Wednesday">Wednesday</option>
-                                    <option value="Thursday">Thursday</option>
-                                    <option value="Friday">Friday</option>
-                                    <option value="Saturday">Saturday</option>
-                                    <option value="Sunday">Sunday</option>
-                                </select>
-
-                                <label for="start-time">Start Time:</label>
-                                <input type="time" id="start-time">
-
-                                <label for="end-time">End Time:</label>
-                                <input type="time" id="end-time">
-
-                                <button onclick="addAvailability()">Add Availability</button>
-                            </div>
-                        </div>
-                    </div>
+                        {% endfor %}
+                        
+                        <!-- Days and Hours -->
+                        {% for day in ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"] %}
+                        <div class="day-label">{{ day }}</div>
+                            {% for hour in range(17, 24) %}
+                            <div class="cell" id="cell-{{ day }}-{{ hour }}"></div>
+                            {% endfor %}
+                        {% endfor %}                        
                 </div>
             </main>
         </div>
     </div>
     <div class="container">
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-2 mt-5 border-top">
-        <p class="col-md-4 mb-0 text-body-secondary">© 2024 Mary Low Coffeehouse</p>
-    
-        <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-            <img src="{{ url_for('static', filename='SmallLogo.png') }}" alt="Logo" width="50" height="50">
-        </a>
-    
-        <ul class="nav col-md-4 justify-content-end">
-            <li class="nav-item"><a href="https://github.com/ryanmogauro/Scheduling-Project" class="nav-link px-2 text-secondary" target="_blank" rel="noopener noreferrer">About Us</a></li>
-        </ul>
-    </footer>
-</div>
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-2 mt-5 border-top"
+            style="box-shadow: 0 -8px 4px -4px rgba(0, 0, 0, 0.05);">
+            <ul class="nav col-md-4 justify-content-start">
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-secondary">© 2024 Mary Low Coffeehouse</a>
+                </li>
+            </ul>
+
+            <a href="/"
+                class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+                <img src="{{ url_for('static', filename='SmallLogo.png') }}" alt="Logo" width="50" height="50">
+            </a>
+
+            <ul class="nav col-md-4 justify-content-end">
+                <li class="nav-item"><a href="https://github.com/ryanmogauro/Scheduling-Project"
+                        class="nav-link px-2 text-secondary" target="_blank" rel="noopener noreferrer">About Us</a></li>
+            </ul>
+        </footer>
+    </div>
+    </div>
     <script src="{{ url_for('static', filename='events.js') }}"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
