--- a/website/templates/unavailability.html
+++ b/website/templates/unavailability.html
@@ -117,6 +117,7 @@
                                 </tr>
                             </tbody>
                         </table>
+                        <li class="dropdown-divider"></li>
                         <!-- Logout Button -->
                         <li class="d-flex justify-content-end px-2">
                             <a href="{{ url_for('auth.logout') }}" class="btn btn-sm btn-light hover-dark-bg border border-dark" id="logout-link">
