--- a/website/templates/events.html
+++ b/website/templates/events.html
@@ -121,6 +121,138 @@
                     </h5>
                     <hr>
                     <ul class="nav nav-pills flex-column mb-auto">
+                        <li>
+                            <a href="#"
+                                class="d-flex align-items-center p-2 mb-2 bg-brown text-white rounded small-font text-decoration-none border border-dark"
+                                data-bs-toggle="modal" data-bs-target="#eventsModal">
+                                <i class="bi bi-plus-circle me-2"></i>
+                                Add
+                            </a>
+
+                            <!-- Confirmation Modal -->
+                            <div class="modal fade" id="eventsModal" tabindex="-1"
+                                aria-labelledby="eventsModalLabel" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="eventsModalLabel">Add Unavailability
+                                            </h5>
+                                            <button type="button" class="btn-close shadow-none" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            
+                                            <!-- Host Name -->
+                                            <label for="event-host">Event Host:</label>
+                                            <input type="text" id="event-host" class="form-control mb-3">
+                                            
+                                            <!-- Event Name -->
+                                            <label for="event-name">Event Name:</label>
+                                            <input type="text" id="event-name" class="form-control mb-3">
+
+
+                                            <!-- Day Selection -->
+                                            <label for="unavailability-date">Select Day:</label>
+                                            <input type="date" id="unavailability-date" class="form-control mb-3">
+                                            
+                                            <!-- Start Hour Selection -->
+                                            <label for="unavailability-start-hour">Select Start Hour:</label>
+                                            <select id="unavailability-start-hour" class="form-select mb-3">
+                                                <option value="17">5 PM</option>
+                                                <option value="18">6 PM</option>
+                                                <option value="19">7 PM</option>
+                                                <option value="20">8 PM</option>
+                                                <option value="21">9 PM</option>
+                                                <option value="22">10 PM</option>
+                                                <option value="23">11 PM</option>
+                            
+                                            </select>
+
+                                            <!-- End Hour Selection -->
+                                            <label for="unavailability-end-hour">Select End Hour:</label>
+                                            <select id="unavailability-end-hour" class="form-select mb-3">
+                                                <option value="17">5 PM</option>
+                                                <option value="18">6 PM</option>
+                                                <option value="19">7 PM</option>
+                                                <option value="20">8 PM</option>
+                                                <option value="21">9 PM</option>
+                                                <option value="22">10 PM</option>
+                                                <option value="23">11 PM</option>
+                                            </select>
+
+                                            <!-- Event Description -->
+                                            <label for="event-description">Event Description:</label>
+                                            <input type="text" id="event-description" class="form-control mb-3">
+
+
+                                            <p id="error-message" style="color: red; display: none;">Please select a
+                                                valid
+                                                date and hour range.</p>
+                                        </div>
+                                        <div class="modal-footer d-flex justify-content-between">
+                                            <!-- Cancel Button -->
+                                            <a href="#"
+                                                class="d-flex align-items-center p-2 bg-secondary text-white rounded text-decoration-none hover-gray border border-dark"
+                                                data-bs-dismiss="modal">
+                                                <i class="bi bi-x-circle me-2"></i>
+                                                Cancel
+                                            </a>
+                                            <!-- Add Button -->
+                                            <a href="#"
+                                                class="d-flex align-items-center p-2 bg-brown text-white rounded text-decoration-none border border-dark"
+                                                onclick="addEvent()">
+                                                <i class="bi bi-plus-circle me-2"></i>
+                                                Confirm
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="#"
+                                class="d-flex align-items-center p-2 mb-2 bg-brown text-white rounded small-font text-decoration-none border border-dark"
+                                data-bs-toggle="modal" data-bs-target="#confirmClearModal">
+                                <i class="bi bi-arrow-counterclockwise me-2"></i>
+                                Clear
+                            </a>
+
+                            <!-- Confirmation Modal -->
+                            <div class="modal fade" id="confirmClearModal" tabindex="-1"
+                                aria-labelledby="confirmClearModalLabel" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="confirmClearModalLabel">Confirm Clear</h5>
+                                            <button type="button" class="btn-close shadow-none" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            Are you sure you want to clear all events this week?
+                                        </div>
+                                        <div class="modal-footer d-flex justify-content-between">
+                                            <!-- Cancel Button -->
+                                            <a href="#"
+                                                class="d-flex align-items-center p-2 bg-secondary text-white rounded text-decoration-none hover-gray border border-dark"
+                                                data-bs-dismiss="modal">
+                                                <i class="bi bi-x-circle me-2"></i>
+                                                Cancel
+                                            </a>
+                                            <!-- Add Button -->
+                                            <a href="#"
+                                                class="d-flex align-items-center p-2 bg-brown text-white rounded text-decoration-none border border-dark"
+                                                onclick="clearUnavailability()" data-bs-dismiss="modal">
+                                                <i class="bi bi-arrow-counterclockwise me-2"></i>
+                                                Confirm
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+            
+                        </li>
                     </ul>
                 </div>
             </aside>
