Added export_schedule functionality

--- a/website/templates/schedule.html
+++ b/website/templates/schedule.html
@@ -45,6 +45,7 @@
                             Events
                         </a>
                     </li>
+
                 </ul>
             </div>
             <!-- Dropdown Section -->
@@ -141,6 +142,13 @@
                     </h5>
                     <hr>
                     <ul class="nav nav-pills flex-column mb-auto">
+                        <li>
+                            <a href="#" 
+                                class="d-flex align-items-center p-2 mb-2 bg-brown text-white rounded small-font text-decoration-none border border-dark" onclick="exportSchedule()">
+                                <i class="bi bi-plus-circle me-2"></i>
+                                Add to Calendar
+                        </a>
+                        </li>
                         <li>
                             <a href="#"
                                 class="d-flex align-items-center p-2 mb-2 bg-brown text-white rounded small-font text-decoration-none border border-dark">
