--- a/website/templates/schedule.html
+++ b/website/templates/schedule.html
@@ -145,23 +145,9 @@
                         <li>
                             <a href="#" 
                                 class="d-flex align-items-center p-2 mb-2 bg-brown text-white rounded small-font text-decoration-none border border-dark" onclick="exportSchedule()">
-                                <i class="bi bi-plus-circle me-2"></i>
-                                Add to Calendar
+                                <i class="bi bi-download me-2"></i>
+                                Export
                         </a>
-                        </li>
-                        <li>
-                            <a href="#"
-                                class="d-flex align-items-center p-2 mb-2 bg-brown text-white rounded small-font text-decoration-none border border-dark">
-                                <i class="bi bi-filter-circle me-2"></i>
-                                Filters
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#"
-                                class="d-flex align-items-center p-2 mb-2 bg-brown text-white rounded small-font text-decoration-none border border-dark">
-                                <i class="bi bi-wrench me-2"></i>
-                                Tools
-                            </a>
                         </li>
                         <li>
                             <a href="#"
