--- a/website/templates/events.html
+++ b/website/templates/events.html
@@ -261,6 +261,14 @@
                     <hr>
                     <div id="eventsList" class="overflow-auto border rounded p-2 bg-light" style = "max-height: 300px;"> </div>
                 </div>
+
+                <div class="p-3 bg-light border rounded shadow-sm">
+                    <h5><i class="bi bi-card-checklist me-1"></i>
+                        Assign Event
+                    </h5>
+                    <hr>
+                    <div id="claimList" class="overflow-auto border rounded p-2 bg-light" style = "max-height: 300px;"> </div>
+                </div>
             </aside>
 
             <!-- Main Content -->
