CLEAR EVENTS HOT FIX

--- a/website/templates/events.html
+++ b/website/templates/events.html
@@ -238,7 +238,7 @@
                                             <!-- Add Button -->
                                             <a href="#"
                                                 class="d-flex align-items-center p-2 bg-brown text-white rounded text-decoration-none border border-dark"
-                                                onclick="clearUnavailability()" data-bs-dismiss="modal">
+                                                onclick="clearEvents()" data-bs-dismiss="modal">
                                                 <i class="bi bi-arrow-counterclockwise me-2"></i>
                                                 Confirm
                                             </a>
