--- a/website/templates/events.html
+++ b/website/templates/events.html
@@ -267,7 +267,7 @@
                         Assign Event
                     </h5>
                     <hr>
-                    <div id="claimList" class="overflow-auto border rounded p-2 bg-light" style = "max-height: 300px;"> </div>
+                    <div id="assignList" class="overflow-auto border rounded p-2 bg-light" style = "max-height: 300px;"> </div>
                 </div>
             </aside>
 
