--- a/website/templates/events.html
+++ b/website/templates/events.html
@@ -287,8 +287,8 @@
                 {% endif %}
 
                 <div class="p-3 bg-light border rounded shadow-sm">
-                    <h5><i class="bi bi-card-checklist me-1"></i>
-                        Assign Event
+                    <h5><i class="bi bi-person-check me-1"></i>
+                        Assign
                     </h5>
                     <hr>
                     <div id="assignList" class="overflow-auto border rounded p-2 bg-light" style = "max-height: 300px;"> </div>
