--- a/website/templates/schedule.html
+++ b/website/templates/schedule.html
@@ -100,7 +100,7 @@
                                 </tr>
                                 <tr>
                                     <th scope="row">Hourly Wage:</th>
-                                    <td>${{ wage }}</td>
+                                    <td id="hourlyWage">${{ wage }}</td>
                                 </tr>
                                 <tr>
                                     <th scope="row">Minimum Hours:</th>
