Hiding generate button

--- a/website/templates/admin.html
+++ b/website/templates/admin.html
@@ -158,11 +158,12 @@
                             </a>
                         </li>
                         <li>
-                            <button id="approve-schedule-button" 
-                                style="display:none;"
-                                class="btn btn-success" onclick="approveSchedule()">
+                            <a href="#"
+                                id="approve-schedule-button"
+                                class="btn btn-success text-white mb-2 small-font text-decoration-none d-flex align-items-center d-none"
+                                onclick="approveSchedule()">
                                 Approve Schedule
-                            </button>
+                            </a>
                         </li>
                     </ul>
                 </div>
